# jupyter_docker_kernels

./: Dockerfile  README.rst  pyproject.toml
jupyter_docker_kernels/: __init__.py  __main__.py  manager.py  provider.py
